--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,10 @@
+@use "./floatMenu.scss";
+
+body {
+    margin: 0;
+    padding-top: 14px;
+}
+
 .edit-icon {
     &__fix svg path {
         fill: transparent;
